# fastapi-backend

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  entry.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yaml  dev.yaml  pages.yaml
app/: apis.py  crypto.py  enums.py  exceptions.py  log.py  main.py  middlewares.py  models.py  otel.py  responses.py  sorting.py
app/cache/: session.py
app/cache/module/: base.py
app/configs/: __init__.py  aad.py  api_whitelist.py  cache.py  cors.py  database.py  general.py  otel.py
app/core/admin/: models.py  router.py
app/core/admin/products/: router.py  schemas.py  service.py
app/core/audit/: models.py  router.py  schemas.py  service.py
app/core/auth/: Readme.md  auth_cache.py  models.py  router.py  schemas.py  service.py
app/core/auth/rbac/: Readme.md  constants.py  decorator.py  router.py  schemas.py  service.py
app/database/clickhouse/: session.py
app/database/postgres/: products_seed.py  seed.py  session.py
app/database/postgres/seed/: menus.json  products.csv
app/tests/: conftest.py  constants.py  test_products.py  test_rbac.py
app/utils/: checksum.py  query.py
docker-compose/: .example.env  docker-compose.yaml  otel-collector-config.yml
docker-compose/clickhouse/: init.sql
docker-compose/clickhouse/ck1/: config.xml
docker-compose/clickhouse/ck2/: config.xml
docs/: index.html  swagger.yaml
migrations/: env.py
migrations/versions/: 2025_01_08_1527-9130a591cbac_init_schemas.py
